<?xml version="1.0" encoding="utf-8"?>
<!--
======================================================
BOTTOM NAV ICONS: Change icons by replacing the drawables below
  ic_home      -> res/drawable/ic_home.xml
  ic_adopt     -> res/drawable/ic_adopt.xml
  ic_missing   -> res/drawable/ic_missing.xml
  ic_book      -> res/drawable/ic_book.xml
The center "+" FAB is in layout, NOT in this menu.
======================================================
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_pet_finder"
        android:icon="@drawable/ic_missing"
        android:title="@string/nav_pet_finder" />
    <item
        android:id="@+id/nav_applications"
        android:icon="@drawable/ic_book"
        android:title="@string/nav_applications" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
